<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.pgrzmil.nativedroid.MenuActivity"
    tools:showIn="@layout/activity_main"
    android:padding="10dp">

    <Button
        android:id="@+id/performanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuPerformance"
        android:onClick="openPerformanceTestActivity"/>
    <Button
        android:id="@+id/networkButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuNetwork"
        android:onClick="openNetworkTestActivity"/>
    <Button
        android:id="@+id/fileAccessButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuFileAccess"
        android:onClick="openFileAccessTestActivity"/>
    <Button
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menuLocation"
        android:onClick="openLocationTestActivity"/>
</LinearLayout>
