<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".NetworkTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/descNetwork"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/addressField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addressHint"
        android:inputType="textUri"
        android:paddingBottom="10dp"
        android:paddingTop="10dp" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/startButton"
        android:onClick="startDownloading"/>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/downloadedImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
