<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.pgrzmil.nativedroid.FileAccessTestActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/descFileAccess"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <Button
            android:id="@+id/readButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/readButton"
            android:onClick="startReading"/>

        <Button
            android:id="@+id/writeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/writeButton"
            android:onClick="startWriting"/>
    </GridLayout>

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/resultView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </ScrollView>
</LinearLayout>
